--- a/examples/01-fizz-buzz/styles.css
+++ b/examples/01-fizz-buzz/styles.css
@@ -16,4 +16,23 @@ pre > span + span {
 
 pre > span:not(:last-child)::after {
   content: ",";
+  font-size: 24px;
+}
+
+#log3 > span:nth-child(5n) {
+  font-size: 0;
+}
+
+#log3 > span:nth-child(5n)::before {
+  content: "Buzz";
+  font-size: 24px;
+}
+
+#log3 > span:nth-child(3n) {
+  font-size: 0;
+}
+
+#log3 > span:nth-child(3n)::before {
+  content: "Fizz";
+  font-size: 24px;
 }
